[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/AddPlayer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/frameB.png" type="Texture" id=3]
[ext_resource path="res://Assets/icons/angle-right-solid.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=6]
size = 110
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=7]
thickness = 5
vertical = true

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1024, 256 )

[sub_resource type="Theme" id=9]
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0, 0, 0, 1 )
LineEdit/styles/focus = SubResource( 7 )
LineEdit/styles/normal = SubResource( 8 )
LineEdit/styles/read_only = null

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="Theme" id=12]
ItemList/styles/bg = SubResource( 11 )
ItemList/styles/bg_focus = SubResource( 13 )
ItemList/styles/selected = SubResource( 14 )
ItemList/styles/selected_focus = SubResource( 15 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_left_end"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, -167 ), Vector2( -3000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_left_start"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, -167 ), Vector2( -1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_right_end"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, -167 ), Vector2( 1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_right_start"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3000, -167 ), Vector2( -1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="AddPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1370, -322 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -4822.0
margin_top = -167.0
margin_right = 1670.0
margin_bottom = 4668.0
color = Color( 0.784314, 0.972549, 0.615686, 1 )

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -281.5
margin_top = 150.0
margin_right = 281.5
margin_bottom = 327.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Geschlecht"
align = 1
valign = 1

[node name="EnterName" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="LineEdit" type="LineEdit" parent="EnterName"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -50.0
margin_right = 265.0
margin_bottom = 50.0
theme = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
align = 1

[node name="SelectSex" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="ItemList" type="ItemList" parent="SelectSex"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -80.5
margin_right = 132.0
margin_bottom = 80.5
theme = SubResource( 12 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 0.317647 )
custom_fonts/font = SubResource( 10 )
items = [ "MÃ¤nnlich", null, false, "Weiblich", null, false ]
max_text_lines = 3

[node name="Next" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="Next"]
position = Vector2( 20, -20 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 4 )

[node name="transition" type="CanvasLayer" parent="."]

[node name="Foreground" type="ColorRect" parent="transition"]
margin_left = -220.0
margin_top = -167.0
margin_right = 899.0
margin_bottom = 1335.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="transition"]
margin_left = 1000.0
margin_top = -167.0
margin_right = 3500.0
margin_bottom = 1833.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition"]
anims/RESET = SubResource( 1 )
anims/fade_left_end = SubResource( 2 )
anims/fade_left_start = SubResource( 3 )
anims/fade_right_end = SubResource( 4 )
anims/fade_right_start = SubResource( 5 )

[connection signal="pressed" from="Next/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
